# prismaa

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  RELEASING.md  TEST_PLAN.md  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  prisma.config.ts  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
api/count-group-by/: index.html
api/create/: index.html
api/delete/: index.html
api/find-many/: index.html
api/find-unique/: index.html
api/transactions-raw/: index.html
api/update/: index.html
contributing/: index.html
docs/: contributing.md  getting-started.md  index.md  prisma-setup.md  schema-reference.md
docs/api/: count-group-by.md  create.md  delete.md  find-many.md  find-unique.md  transactions-raw.md  update.md
example/: schema.prisma
getting-started/: index.html
prisma-setup/: index.html
schema-reference/: index.html
search/: search_index.json
src/aprisma/: cli.py
src/aprisma/generator/: generator.py
src/aprisma/generator/templates/: __init__.py.j2  client.py.j2  models.py.j2  tables.py.j2  types.py.j2
src/aprisma/parser/: __init__.py  ast.py  lexer.py  parser.py
src/aprisma/runtime/: include.py  metadata.py
src/prismaa/: cli.py
src/prismaa/generator/: generator.py
src/prismaa/generator/templates/: __init__.py.j2  client.py.j2  models.py.j2  tables.py.j2  types.py.j2
src/prismaa/parser/: ast.py  parser.py
src/prismaa/runtime/: connection.py  delegate.py  errors.py  include.py  where.py
tests/: conftest.py
tests/fixtures/: schema.postgresql.prisma  schema.prisma
tests/integration/: prisma_test_case.py  test_aggregation.py  test_atomic_update.py  test_composite_key.py  test_connection.py  test_count.py  test_create_many.py  test_cursor_pagination.py  test_distinct_relations.py  test_errors.py  test_find_first.py  test_find_or_raise.py  test_group_by.py  test_include.py  test_include_subfilters.py  test_nested_include.py  test_nested_writes.py  test_nullable_fields.py  test_raw_queries.py  test_relation_where.py  test_scalar_types.py  test_select.py  test_transactions.py  test_user_crud.py  test_where_filters.py
tests/unit/: test_lexer.py  test_parser.py
