[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prismaa"
version = "0.1.1"
description = "A production-grade Python Prisma client"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Laszlo Sragner", email = "5104441+xLaszlo@users.noreply.github.com" }]
keywords = ["prisma", "orm", "database", "async", "sqlalchemy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Database",
]
dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "click>=8.0",
    "jinja2>=3.1",
]

[project.scripts]
prismaa = "prismaa.cli:main"

[project.urls]
Homepage = "https://github.com/xLaszlo/prismaa"
Documentation = "https://xLaszlo.github.io/prismaa"
Repository = "https://github.com/xLaszlo/prismaa"
Issues = "https://github.com/xLaszlo/prismaa/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pre-commit>=3.0",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prismaa"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["prismaa"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
exclude = ["excluded_file.py"]

lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
lint.ignore = [
    "E501",  # line too long
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["prismaa"]
